# repo-doctor

./: README.md  SECURITY.md  pyproject.toml
.github/workflows/: release-binaries.yml
action/: action.yml
gui/: app.py
src/repo_doctor/: __init__.py  __main__.py
