[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-doctor"
version = "0.1.1"
description = "Turn any repository into an open-source-ready, professional repo in one command."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Repo Doctor Contributors" }]
keywords = ["git", "repository", "open-source", "cli", "linter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gui = ["streamlit>=1.30.0"]

[project.urls]
Homepage = "https://github.com/JaaasperLiu/repo-doctor"
Repository = "https://github.com/JaaasperLiu/repo-doctor"
Issues = "https://github.com/JaaasperLiu/repo-doctor/issues"
Changelog = "https://github.com/JaaasperLiu/repo-doctor/releases"

[project.scripts]
repo-doctor = "repo_doctor.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/repo_doctor"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
